@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "b1.0-2"
+version = "b1.0-3"
 group= "dany.toomanygoddamnores" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "TooManyDanyOres"
 
