@@ -4,6 +4,9 @@
 3. Minor: important changes to a mod
 4. Build: Whenever the mod is built by ForgeGradle (IDE builds don't count). Also independent from the other ones
 
+b1.0-3 (2014/08/10 16:12 GMT+0)
+- Added /iteminfo [id] command. It shows OreDictionary names of an item and its UniqueIdentifier
+
 b1.0-2 (2014/08/09 20:09 GMT+0)
 - Added item replacement feature
 
